@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.505 2005/11/29 01:38:24 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.506 2005/12/02 02:50:50 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  1 Dec 2005; Preston Cody <codeman@gentoo.org>
+  added debug mode question to gli-dialog
+  added CC proxies to CC networking for gli-dialog
+  
   28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   change ping count to 2
